--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
             sendEmailVerification,
             updateProfile
         };
-    </script>    <style>
+    </script>
+  
+    <style>
         /* Silran Coin Theme Variables */
         :root {
             --bg-color: #000000;
